# loong_third_party

./: .gitignore  CMakeLists.txt  README.md  modbus-ipc.patch
ethercat/: config.h
ethercat-cpp/include/: ServoIpcStruct.h  ec_task.h
ethercat-cpp/include/ecat/: algorithm_threads.hpp  buffer.hpp  buffer_locked.hpp  buffer_rtlocked.hpp  dc.hpp  eni_config.hpp  error.hpp  ipc.hpp  log.hpp  master.hpp  niic_api.hpp  pwm.hpp  reg_request.hpp  run_time_stat.hpp  s2s_func.hpp  sdo_request.hpp  slave_config.hpp  slice.hpp  spi_io.hpp  task.hpp  task_assist.hpp  task_collaborative.hpp  task_interface.hpp  thread_mutex.hpp  thread_rtlock.hpp  types.hpp  version.hpp
ethercat-cpp/include/ecat/detail/: config.hpp  esi_index.hpp  file.hpp  ioctl.hpp  log_handler.hpp  logger.hpp  os_string.hpp  sii_crc.hpp  thread.hpp  utility.hpp
ethercat-cpp/include/ecat/rokae/: extra.hpp
ethercat-cpp/lib/cmake/ethercat-cpp/: ethercat-cpp-config.cmake  ethercat-cpp-targets-relwithdebinfo.cmake  ethercat-cpp-targets.cmake
ethercat/master/: Kbuild
modbus/: config.h  modbus-ipc.patch
modbus/include/: modbus-ipc.h  modbus-version.h  modbus.h
modbus/src/: modbus-ipc-private.h  modbus-ipc.c  modbus-private.h  modbus-tcp.c  modbus.c
necro/: libboost_filesystem.so.1.74.0  libcrypto.so.3  libcurl-gnutls.so.4  libfmt.so.8  libgnutls.so.30  liblber-2.5.so.0  libldap-2.5.so.0  libspdlog.so.1  libssh.so.4  libstdc++.so.6  libtasn1.so.6  necro.sh
necro/include/: necro_config.h
necro/include/boilerplate/: ancillaries.h  atomic.h  avl-inner.h  avl.h  compiler.h  debug.h  hash.h  heapmem.h  libc.h  list.h  lock.h  namegen.h  obstack.h  private-list.h  scope.h  setup.h  shared-list.h  shavl.h  time.h  tunables.h
necro/include/necro/: init.h
necro/include/qiuniu/: fcntl.h  init.h  mqueue.h  pthread.h  sched.h  semaphore.h  signal.h  stdio.h  stdlib.h  syslog.h  ticks.h  time.h  trace.h  tunables.h  unistd.h  wrappers.h
necro/include/qiuniu/boilerplate/: limits.h  sched.h  signal.h  trace.h  wrappers.h
necro/include/qiuniu/sys/: ioctl.h  mman.h  qiuniu.h  select.h  socket.h  time.h  timerfd.h
necro/include/qiuniu/uapi/: cond.h  corectl.h  event.h  monitor.h  mutex.h  sched.h  sem.h  signal.h  thread.h  time.h
necro/include/qiuniu/uapi/kernel/: heap.h  limits.h  pipe.h  synch.h  thread.h  trace.h  types.h  urw.h  vdso.h
necro/include/rldf/: autotune.h  ipc.h  rldf.h
necro/include/rldf/uapi/: autotune.h  ipc.h  rldf.h
necro/lib/: libcopperplate.la  libcopperplate.so.0.0.0  libmodechk.la  libmodechk.so.0.0.0  libqiuniu.la  libqiuniu.so.2  libqiuniu.so.2.0.0
necro/lib/cmake/necro/: bootstrap-template.h  necro-config.cmake  necro-macros.cmake  necro-targets-noconfig.cmake  necro-targets.cmake
netlink/: iproute2.patch
netlink/include/: libnetlink.h  utils.h
